# mini-database

./: CMakeLists.txt  README.md
src/: Database.cpp  Database.h  MainFrame.cpp  MainFrame.h  Student.cpp  Student.h  main.cpp
